harness/test/errors/042_bad_format_string.eu
# Bad format string
x: 42 fmt("%z")
